log
Fri 24 Mar 2023 11:34:01 AM UTC: 
 tests:  0|6
total_score: 0/70
36f7d6b
Fri 24 Mar 2023 11:35:11 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’; have ‘List *(List *)’ {aka ‘struct List *(struct List *)’}
   31 | List * createList(List* list) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
    6 | List * createList(void);
      |        ^~~~~~~~~~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(List* list) {
      |        ^~~~~~~~~~
Compilation failed
005c027
Fri 24 Mar 2023 11:35:24 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cd3138f
Fri 24 Mar 2023 12:01:53 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’; have ‘List *(void *)’ {aka ‘struct List *(void *)’}
   31 | List * createList(void* L) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
    6 | List * createList(void);
      |        ^~~~~~~~~~
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: ‘L’ redeclared as different kind of symbol
   32 |   List* L = (List*) malloc(sizeof(List));
      |         ^
list.c:31:25: note: previous definition of ‘L’ with type ‘void *’
   31 | List * createList(void* L) {
      |                   ~~~~~~^
list.c: In function ‘firstList’:
list.c:42:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if (list->head=NULL){
      |       ^~~~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(void* L) {
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
486c329
Fri 24 Mar 2023 12:02:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if (list->head=NULL){
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
7a60fc9
Fri 24 Mar 2023 12:04:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if (list->head=NULL){
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
f9ef9db
Fri 24 Mar 2023 12:05:51 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if ((list->head)=NULL){
      |       ^
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aa48818
Fri 24 Mar 2023 12:06:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if ( list->head=NULL){
      |        ^~~~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
abbc4e6
Fri 24 Mar 2023 12:06:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
40ae450
Fri 24 Mar 2023 12:07:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   42 |   if (list->head->data=NULL){
      |       ^~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
661ce48
